--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: CI
 
 on:
   push:
@@ -20,7 +20,33 @@ env:
   ACR_IMAGE_NAME: bcs100x-tester
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.24'
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clang python3 sqlite3
+
+      - name: Build tester
+        run: go build -v .
+
+      - name: Run unit tests
+        run: go test -v ./...
+
+      - name: Verify binary
+        run: ./bcs100x-tester --help
+
   build-and-push:
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -60,17 +86,12 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             ${{ env.ACR_REGISTRY }}/${{ env.ACR_NAMESPACE }}/${{ env.ACR_IMAGE_NAME }}
           tags: |
-            # Tag with branch name for branch pushes
             type=ref,event=branch
-            # Tag with PR number for pull requests
             type=ref,event=pr
-            # Tag with semver for version tags
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            # Tag latest for main branch
             type=raw,value=latest,enable={{is_default_branch}}
-            # Tag with short commit SHA
             type=sha,prefix={{branch}}-
 
       - name: Build and push Docker image
@@ -84,10 +105,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          build-args: |
-            BUILDTIME=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}
-            VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-            REVISION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
 
       - name: Generate artifact attestation
         if: github.event_name != 'pull_request'
